Here's the commented version of the code:

```c++
// Copyright 2021 gRPC authors.

#ifndef GRPC_SRC_CORE_XDS_XDS_CLIENT_XDS_RESOURCE_TYPE_IMPL_H
#define GRPC_SRC_CORE_XDS_XDS_CLIENT_XDS_RESOURCE_TYPE_IMPL_H

#include <memory>
#include <utility>

#include "absl/strings/string_view.h"
#include "src/core/util/down_cast.h"
#include "src/core/util/ref_counted_ptr.h"
#include "src/core/xds/xds_client/xds_client.h"
#include "src/core/xds/xds_client/xds_resource_type.h"

namespace grpc_core {

// Template class providing common implementation for XDS resource types.
// Subclass must provide the concrete ResourceTypeStruct implementation.
template <typename Subclass, typename ResourceTypeStruct>
class XdsResourceTypeImpl : public XdsResourceType {
 public:
  using ResourceType = ResourceTypeStruct;

  // Interface for watchers of this resource type.
  // Subclasses must implement OnResourceChanged() to handle resource updates.
  class WatcherInterface : public XdsClient::ResourceWatcherInterface {
   public:
    // Called when the watched resource changes or when an error occurs.
    // Parameters:
    // - resource: Either the new resource data or an error status
    // - read_delay_handle: Handle for controlling read delay behavior
    virtual void OnResourceChanged(
        absl::StatusOr<std::shared_ptr<const ResourceType>> resource,
        RefCountedPtr<XdsClient::ReadDelayHandle> read_delay_handle) = 0;

   private:
    // Implementation of the generic resource change notification that converts
    // the generic resource data to the specific resource type before calling
    // the subclass's OnResourceChanged().
    void OnGenericResourceChanged(
        absl::StatusOr<std::shared_ptr<const XdsResourceType::ResourceData>>
            resource,
        RefCountedPtr<XdsClient::ReadDelayHandle> read_delay_handle) override {
      if (!resource.ok()) {
        // Forward error status directly
        OnResourceChanged(resource.status(), std::move(read_delay_handle));
      } else {
        // Cast generic resource to specific type and forward
        OnResourceChanged(
            std::static_pointer_cast<const ResourceType>(std::move(*resource)),
            std::move(read_delay_handle));
      }
    }
  };

  // Returns singleton instance of the Subclass
  static const Subclass* Get() {
    static const Subclass* g_instance = new Subclass();
    return g_instance;
  }

  // Starts watching for updates to the specified resource.
  // Parameters:
  // - xds_client: The XDS client instance
  // - resource_name: Name of the resource to watch
  // - watcher: Watcher implementation to notify of changes
  static void StartWatch(XdsClient* xds_client, absl::string_view resource_name,
                         RefCountedPtr<WatcherInterface> watcher) {
    xds_client->WatchResource(Get(), resource_name, std::move(watcher));
  }

  // Cancels an existing resource watch.
  // Parameters:
  // - xds_client: The XDS client instance
  // - resource_name: Name of the resource being watched
  // - watcher: Watcher to cancel
  // - delay_unsubscription: If true, delays unsubscribing from the resource
  static void CancelWatch(XdsClient* xds_client,
                          absl::string_view resource_name,
                          WatcherInterface* watcher,
                          bool delay_unsubscription = false) {
    xds_client->CancelResourceWatch(Get(), resource_name, watcher,
                                    delay_unsubscription);
  }

  // Compares two resources for equality by delegating to the resource type's
  // equality operator.
  bool ResourcesEqual(const ResourceData* r1,
                      const ResourceData* r2) const override {
    return *DownCast<const ResourceType*>(r1) ==
           *DownCast<const ResourceType*>(r2);
  }
};

}  // namespace grpc_core

#endif  // GRPC_SRC_CORE_XDS_XDS_CLIENT_XDS_RESOURCE_TYPE_IMPL_H
```

Key improvements in the comments:
1. Added high-level description of the template class purpose
2. Documented the WatcherInterface and its methods
3. Explained the purpose of each static method
4. Added parameter descriptions for all methods
5. Clarified the behavior of the resource comparison
6. Added namespace closing comment
7. Added header guard closing comment
8. Explained the type conversion in OnGenericResourceChanged

The comments follow a consistent style and provide meaningful explanations without being overly verbose. They cover both the "what" and the "why" of the code's functionality.